--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Node modules
 node_modules/
++.pnpm/
 
 # Production build output
 .next/
@@ -10,6 +11,8 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
++logs/
++*.log
 
 # dotenv environment variables
 .env
@@ -17,6 +20,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
++.env.*.local
 
 # VSCode settings
 .vscode/
@@ -49,3 +53,9 @@ Desktop.ini
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
+
++# Temporary files / misc
++.DS_Store
++*.bak
++*.tmp
+
